objects/Transaction_Management_History__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount of the associated reimbursement.</description>
        <inlineHelpText>Amount of the associated reimbursement.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Associated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden Field - Used for updating the history records if the contact is associated later in the Transaction.</description>
        <label>Contact Associated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <description>Local Customer Id of the Customer associated with the parent Transaction.</description>
        <formula>Transaction_Management__r.Contact__r.CustomerID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Customer Id of the Customer associated with the parent Transaction.</inlineHelpText>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transaction Management Histories</relationshipLabel>
        <relationshipName>Transaction_Management_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <formula>TEXT(Transaction_Management__r.Disposition__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disposition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name of the Customer associated with the parent Transaction.</description>
        <inlineHelpText>First Name of the Customer associated with the parent Transaction.</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Id__c</fullName>
        <formula>Issue__r.CaseNumber</formula>
        <label>Issue Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Reviewed_ByName__c</fullName>
        <formula>Issue_Reviewed_By__r.CommunityNickname</formula>
        <label>Issue Reviewed ByName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transaction_Management_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Reviewed_Date__c</fullName>
        <label>Issue Reviewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Issue</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Transaction Management Histories</relationshipLabel>
        <relationshipName>Transaction_Management_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of the Customer associated with the parent Transaction.</description>
        <inlineHelpText>Last Name of the Customer associated with the parent Transaction.</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Type__c</fullName>
        <description>Letter Type from the associated Correspondence.</description>
        <inlineHelpText>Letter Type from the associated Correspondence.</inlineHelpText>
        <label>Letter Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Company__c</fullName>
        <description>Operating company of the transaction.</description>
        <formula>TEXT(Transaction_Management__r.Operating_Company__r.OperatingCompany__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Operating company of the transaction.</inlineHelpText>
        <label>Operating Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <label>Package Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Group_Code__c</fullName>
        <label>Service Group Code</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRCAGEVERIFY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTOMERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISSUES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGProgramAllocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAVDecline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UpdateSurvey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PNASRequest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRCAGEVERIFYRQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPROVALS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Request_Code__c</fullName>
        <description>Denotes the History type.</description>
        <inlineHelpText>Denotes the History type.</inlineHelpText>
        <label>Service Request Code</label>
        <picklist>
            <picklistValues>
                <fullName>AGE_VERIFY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCNLOOKUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORSP_OUTBOUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREATE_REIMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREATE_SURVEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREATECUST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREATEISSUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATE_REIMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATE_SURVEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATECUST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATEISSUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENDCALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FULL_SEARCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGE_VERIFICATION_REQUEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISSUE_APPROVED</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Survey associated.</description>
        <inlineHelpText>Status of the Survey associated.</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Termination_Reason__c</fullName>
        <description>Survey Termination Reason</description>
        <inlineHelpText>Survey Termination Reason</inlineHelpText>
        <label>Survey Termination Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_Management_Id__c</fullName>
        <formula>Transaction_Management__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Management</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Management__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transaction Management</label>
        <referenceTo>Transaction_Management__c</referenceTo>
        <relationshipLabel>Transaction Management History</relationshipLabel>
        <relationshipName>Transaction_Management_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_Reason__c</fullName>
        <label>Update Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transaction Management History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Group_Code__c</columns>
        <columns>Service_Request_Code__c</columns>
        <columns>Transaction_Management_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Transaction Management History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Management Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>